# Movie-Recommender

./: README.md  docker-compose.yml
Backend/Movie-Recommender/: .gitignore  Dockerfile  notes.md  pyproject.toml
Backend/Movie-Recommender/movie_recommender/: main.py
Backend/Movie-Recommender/movie_recommender/api/: movie.py
Backend/Movie-Recommender/movie_recommender/data/: user_searched_movies.csv
Backend/Movie-Recommender/movie_recommender/recommender/: app.py
Backend/Movie-Recommender/movie_recommender/schemas/: movie.py
Backend/Movie-Recommender/movie_recommender/utils/: file_utils.py  pandas_utils.py
Frontend/Movie-Recommender/: Dockerfile  package-lock.json  package.json
Frontend/Movie-Recommender/src/: App.tsx  main.tsx
